--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deuteriunt | Bio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcuticon" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
