--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deuteriunt | Bio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcuticon" href="/favicon.ico" />
+    <link rel="shortcut" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
@@ -20,6 +20,7 @@
       defer
     ></script>
   </head>
+  <link rel="bookmork" href="/favicon.ico" />
   <body>
     <div class="margin-content">
       <div class="box">
