--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Deuteriunt | Bio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut" href="/favicon.ico" />
+    <link rel="bookmark" href="/favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
@@ -20,7 +21,6 @@
       defer
     ></script>
   </head>
-  <link rel="bookmork" href="/favicon.ico" />
   <body>
     <div class="margin-content">
       <div class="box">
