--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deuteriunt | Bio</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut" href="/favicon.ico" />
-    <link rel="bookmark" href="/favicon.ico" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
