--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
     </div>
     
     <div class="inf"></div>
-    <script type="module" src="./js/fetch.js"></script>
-    <script type="module">
-      import { status, pfp } from "./js/fetch.js";
-    </script>
+    <div id="aplayer-fixed" class="aplayer"></div>
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
+    <script src="./js/Meting.min.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
