--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <script>
       // 音乐设置
       let meting_music_api = "https://meting.170601.xyz";// meting api
-      let music_server = "tencent"; // 音乐服务：QQ音乐 tencent 参见 meting api支持的服务
+      let music_server = "netease"; // 音乐服务：网易云音乐 netease 参见 meting api支持的服务
       let music_type = "playlist"; // 歌曲类型：歌单playlist 单首歌曲 song  专辑 album
-      let music_id = "8907813011"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
+      let music_id = "2851159417"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
       let music_order = "random"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
       let music_mini = false; // mini模式 吸底模式开启后此选项实效 true / false
       let music_fixed = false; // 吸底模式
@@ -79,10 +79,9 @@
     </div>
     
     <div class="inf"></div>
-    <div id="aplayer-fixed" class="aplayer"></div>
-    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
-    <script src="./js/Meting.min.js"></script>
-    <script src="./js/main.js"></script>
+   <script type="module" src="./js/fetch.js"></script>
+    <script type="module">
+      import { status, pfp } from "./js/fetch.js";
+    </script>
   </body>
 </html>
