--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       src="https://kit.fontawesome.com/cf16def632.js"
       crossorigin="anonymous"
       defer
-    ></script>
-    <script>
+    ></script>    
+  </head>
           // 音乐设置
     let meting_music_api = "https://api.mizore.cn/meting/api.php";// meting api
     let music_server = "netease"; // 音乐服务：网易云 netease 
@@ -31,9 +31,6 @@
     let music_volume = 0.7; // 默认音量
     let music_autoplay = true; // 自动播放
     let music_loop = "all"; // 音频循环播放, 可选值: 'all', 'one', 'none'
-  </script>
-    
-  </head>
   <body>
     <div class="margin-content">
       <div class="box">
@@ -44,7 +41,7 @@
         <h1 data-value="Deuteriunt">Deuteriunt</h1>
         <script src="./js/text.js"></script>
         <p class="under-txt" style="margin-bottom: 5">
-          Who am I where am I
+         "其实你心里早就有了答案，你就是不想承认，你就是不甘心爱了那么久的人，连个像样的交代都给不了你"
         </p>
         <p id="discord-status"></p>
         <div class="links">
