--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1 data-value="Deuteriunt">Deuteriunt</h1>
         <script src="./js/text.js"></script>
         <p class="under-txt" style="margin-bottom: 5">
-         "其实你心里早就有了答案，你就是不想承认，你就是不甘心爱了那么久的人，连个像样的交代都给不了你"
+         "世间万物都别等失去了，再来睹物思人."
         </p>
         <p id="discord-status"></p>
         <div class="links">
