--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Bio or something" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deuteriunt | Bio</title>
+    <link rel="stylesheet" href="./js/APlayer-1.10.1/dist/APlayer.min.css">
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link
@@ -18,7 +19,20 @@
       src="https://kit.fontawesome.com/cf16def632.js"
       crossorigin="anonymous"
       defer
-    ></script>    
+    ></script>
+    // 音乐设置
+      let meting_music_api = "https://meting.170601.xyz";// meting api
+      let music_server = "tencent"; // 音乐服务：网易云 netease 参见 meting api支持的服务
+      let music_type = "playlist"; // 歌曲类型：歌单playlist 单首歌曲 song  专辑 album
+      let music_id = "8907813011"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
+      let music_order = "random"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
+      let music_mini = false; // mini模式 吸底模式开启后此选项实效 true / false
+      let music_fixed = false; // 吸底模式
+      let music_volume = 0.7; // 默认音量
+      let music_autoplay = ture; // 自动播放
+      let music_loop = "all"; // 音频循环播放, 可选值: 'all', 'one', 'none' ，分别为全部循环，单曲循环，不循环
+    </script>
+  
   </head>
   <body>
     <div class="margin-content">
@@ -64,8 +78,13 @@
       </div>
     </div>
     
-    <div class="inf"></div>
-   <script type="module" src="./js/fetch.js"></script>
+       <div class="inf"></div>
+    <div id="aplayer-fixed" class="aplayer"></div>
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
+    <script src="./js/Meting.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script type="module" src="./js/fetch.js"></script>
     <script type="module">
       import { status, pfp } from "./js/fetch.js";
     </script>
