--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       crossorigin="anonymous"
       defer
     ></script>
+    <script>
     // 音乐设置
       let meting_music_api = "https://meting.170601.xyz";// meting api
       let music_server = "tencent"; // 音乐服务：网易云 netease 参见 meting api支持的服务
