--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
           ></a>
           <a href="https://steamcommunity.com/id/Deuteriunt" class="grey-link"
             ><i class="fa-brands fa-steam"></i
-          /></a>
-        </div>
+            </a>
+         </div>       
+
+                <div id="aplayer-inner" class="aplayer"></div>
+
       </div>
-    </div>
-    
+    </div>    
        <div class="inf"></div>
     <div id="aplayer-fixed" class="aplayer"></div>
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
