--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script>
     // 音乐设置
       let meting_music_api = "https://meting.170601.xyz";// meting api
-      let music_server = "tencent"; // 音乐服务：网易云 netease 参见 meting api支持的服务
+      let music_server = "tencent"; // 音乐服务：QQ音乐 tencent 参见 meting api支持的服务
       let music_type = "playlist"; // 歌曲类型：歌单playlist 单首歌曲 song  专辑 album
       let music_id = "8907813011"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
       let music_order = "random"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
