--- a/index.html
+++ b/index.html
@@ -21,42 +21,41 @@
       defer
     ></script>
     <script>
-    // 音乐设置
+      // 音乐设置
       let meting_music_api = "https://meting.170601.xyz";// meting api
-      let music_server = "tencent"; // 音乐服务：QQ音乐 tencent 参见 meting api支持的服务
+      let music_server = "tencent"; // 音乐服务：网易云 netease 参见 meting api支持的服务
       let music_type = "playlist"; // 歌曲类型：歌单playlist 单首歌曲 song  专辑 album
       let music_id = "8907813011"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
       let music_order = "random"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
       let music_mini = false; // mini模式 吸底模式开启后此选项实效 true / false
       let music_fixed = false; // 吸底模式
       let music_volume = 0.7; // 默认音量
-      let music_autoplay = ture; // 自动播放
+      let music_autoplay = true; // 自动播放
       let music_loop = "all"; // 音频循环播放, 可选值: 'all', 'one', 'none' ，分别为全部循环，单曲循环，不循环
-    </script>
-  
+  </script>
+
   </head>
   <body>
     <div class="margin-content">
       <div class="box">
         <img
           class="pfp"
-          src="https://avatars.githubusercontent.com/u/113855835?v=4"
+          src="./assets/head.png"
+          style="border: 3px solid rgb(255, 165, 135);"
         />
-        <h1 data-value="Deuteriunt">Deuteriunt</h1>
+        <h1 data-value="Bludoge">Bludoge</h1>
         <script src="./js/text.js"></script>
         <p class="under-txt" style="margin-bottom: 5">
-         "世间万物都别等失去了，再来睹物思人."
+          "世间万物都别等失去了，再来睹物思人."
         </p>
         <p id="discord-status"></p>
         <div class="links">
-          <a
-            href="https://open.spotify.com/user/31xis75kiqcqka7hglhfzcfte55u?si=0a83bbe4a0094f99"
-            class="grey-link"
+          <a href="https://open.spotify.com/user/31xis75kiqcqka7hglhfzcfte55u?si=0a83bbe4a0094f99" class="grey-link"
             ><i class="fa-brands fa-spotify"></i
           ></a>
           <a href="https://music.apple.com/profile/thereallo6" class="grey-link"
             ><i class="fa-brands fa-apple"></i
-        ></a>
+          ></a>
           <a href="https://enka.network/u/Deuteriunt" class="grey-link"
             ><img src="assets/enka.svg"
           /></a>
@@ -74,14 +73,14 @@
           ></a>
           <a href="https://steamcommunity.com/id/Deuteriunt" class="grey-link"
             ><i class="fa-brands fa-steam"></i
-            </a>
-         </div>       
+          </a>
+        </div>       
 
                 <div id="aplayer-inner" class="aplayer"></div>
 
       </div>
-    </div>    
-       <div class="inf"></div>
+    </div>
+    <div class="inf"></div>
     <div id="aplayer-fixed" class="aplayer"></div>
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
