--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       <div class="box">
         <img
           class="pfp"
-          src="./assets/head.png"
+          src="https://avatars.githubusercontent.com/u/113855835?v=4"
           style="border: 3px solid rgb(255, 165, 135);"
         />
-        <h1 data-value="Bludoge">Bludoge</h1>
+        <h1 data-value="Deuteriunt">Deuteriunt</h1>
         <script src="./js/text.js"></script>
         <p class="under-txt" style="margin-bottom: 5">
           "世间万物都别等失去了，再来睹物思人."
