--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,10 +8,9 @@
     <meta name="title" content="Deuteriunt.dev" />
     <meta name="description" content="Bio or something" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Deuteriunt | Bio</title>
+    <title>Bludoge | Bio</title>
     <link rel="stylesheet" href="./js/APlayer-1.10.1/dist/APlayer.min.css">
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
@@ -21,19 +21,19 @@
       defer
     ></script>
     <script>
-    // 音乐设置
+      // 音乐设置
       let meting_music_api = "https://meting.170601.xyz";// meting api
-      let music_server = "tencent"; // 音乐服务：QQ音乐 tencent 参见 meting api支持的服务
+      let music_server = "tencent"; // 音乐服务：网易云 netease 参见 meting api支持的服务
       let music_type = "playlist"; // 歌曲类型：歌单playlist 单首歌曲 song  专辑 album
       let music_id = "8907813011"; // 歌单ID或歌曲ID或者专辑ID 20173709 29732992
-      let music_order = "random"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
+      let music_order = "list"; // 音频循环顺序, 顺序播放： 'list', 随机播放：'random'
       let music_mini = false; // mini模式 吸底模式开启后此选项实效 true / false
       let music_fixed = false; // 吸底模式
       let music_volume = 0.7; // 默认音量
-      let music_autoplay = ture; // 自动播放
+      let music_autoplay = false; // 自动播放
       let music_loop = "all"; // 音频循环播放, 可选值: 'all', 'one', 'none' ，分别为全部循环，单曲循环，不循环
-    </script>
-  
+  </script>
+
   </head>
   <body>
     <div class="margin-content">
@@ -41,55 +41,54 @@
         <img
           class="pfp"
           src="https://avatars.githubusercontent.com/u/113855835?v=4"
+          style="border: 3px solid rgb(255, 165, 135);"
         />
         <h1 data-value="Deuteriunt">Deuteriunt</h1>
         <script src="./js/text.js"></script>
         <p class="under-txt" style="margin-bottom: 5">
-         "世间万物都别等失去了，再来睹物思人."
+       "世间万物都别等失去了，再来睹物思人."
         </p>
         <p id="discord-status"></p>
         <div class="links">
-          <a
-            href="https://open.spotify.com/user/31xis75kiqcqka7hglhfzcfte55u?si=0a83bbe4a0094f99"
-            class="grey-link"
+          <a href="https://open.spotify.com/user/31xis75kiqcqka7hglhfzcfte55u?si=0a83bbe4a0094f99" class="grey-link"
             ><i class="fa-brands fa-spotify"></i
           ></a>
           <a href="https://music.apple.com/profile/thereallo6" class="grey-link"
             ><i class="fa-brands fa-apple"></i
-        ></a>
+          ></a>
           <a href="https://enka.network/u/Deuteriunt" class="grey-link"
             ><img src="assets/enka.svg"
-          /></a>
+          ></a>
           <a href="https://github.com/serendipitk" class="grey-link"
-            ><i class="fa-brands fa-github"></i
+            ><i class="fa-brands fa-github"></i             
           ></a>
           <a href="https://twitter.com/serendipitk" class="grey-link"
             ><i class="fa-brands fa-twitter"></i
           ></a>
           <a href="https://www.instagram.com/se.rendipity492" class="grey-link"
-            ><i class="fa-brands fa-instagram"></i
-          ></a>
-          <a href="https://www.tiktok.com/@Deuteriunt" class="grey-link"
-            ><i class="fa-brands fa-tiktok"></i
+          ><i class="fa-brands fa-instagram"></i
           ></a>
           <a href="https://steamcommunity.com/id/Deuteriunt" class="grey-link"
-            ><i class="fa-brands fa-steam"></i
+          ><i class="fa-brands fa-steam"></i
+        ></a>
+          <a href="https://www.tiktok.com/@Deuteriunt" class="grey-link"
+          ><i class="fa-brands fa-tiktok"></i>
           </a>
-          </div>       
-  
-                  <div id="aplayer-inner" class="aplayer"></div>
-  
-        </div>
+        </div>       
+
+                <div id="aplayer-inner" class="aplayer"></div>
+
       </div>
-      <div class="inf"></div>
-      <div id="aplayer-fixed" class="aplayer"></div>
-      <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
-      <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
-      <script src="./js/Meting.min.js"></script>
-      <script src="./js/main.js"></script>
-      <script type="module" src="./js/fetch.js"></script>
-      <script type="module">
-        import { status, pfp } from "./js/fetch.js";
-      </script>
-    </body>
-  </html>
+    </div>
+    <div class="inf"></div>
+    <div id="aplayer-fixed" class="aplayer"></div>
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./js/APlayer-1.10.1/dist/APlayer.min.js"></script>
+    <script src="./js/Meting.min.js"></script>
+    <script src="./js/main.js"></script>
+    <script type="module" src="./js/fetch.js"></script>
+    <script type="module">
+      import { status, pfp } from "./js/fetch.js";
+    </script>
+  </body>
+</html>
