--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="title" content="Deuteriunt.dev" />
     <meta name="description" content="Bio or something" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bludoge | Bio</title>
+    <title>Deuteriunt | Bio</title>
     <link rel="stylesheet" href="./js/APlayer-1.10.1/dist/APlayer.min.css">
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Google+Sans:400,500,600,700"
       rel="stylesheet"
