--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
           ></a>
           <a href="https://steamcommunity.com/id/Deuteriunt" class="grey-link"
           ><i class="fa-brands fa-steam"></i
-        ></a>
           <a href="https://www.tiktok.com/@Deuteriunt" class="grey-link"
-          ><i class="fa-brands fa-tiktok"></i>
+          ><i class="fa-brands fa-tiktok"></i  
+        ></a>
+          <a href="https://www.deuteriunt.eu.org/" class="grey-link"
+          ><i class="fa-brands fa-ChatGPT"></i>
           </a>
         </div>       
 
